<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AusApp</string>
    <string name="action_settings">ตั้งค่า</string>
    <string name="one">TabOne</string>
    <string name="two">TabTwo</string>
    <string name="commu_btn">open commu page</string>
    <string name="exam_btn">open exam page</string>
    <string name="tts_btn">speak</string>
    <string name="pic_name">ชื่อภาพ</string>
    <string name="category">หมวดหมู่</string>
    <string name="accept">ตกลง</string>
    <string name="cancel">ยกเลิก</string>
    <string name="edit">แก้ไข</string>
    <string name="add_item_dialog_title">เพิ่มข้อมูล</string>
    <string name="choose_picture">เลือกรูปภาพ</string>
    <string name="read">อ่าน</string>
    <string name="exam_name">ชื่อ</string>
    <string name="description">คำอธิบาย</string>
    <string name="q_type">ประเภทของคำถาม</string>
    <string name="o_type">ประเภทของตัวเลือก</string>
    <string name="add_question">-- เพิ่มข้อมูลคำถาม --</string>
    <string name="add_option">-- เพิ่มข้อมูลตัวเลือก --</string>
    <string name="question">คำถาม</string>
    <string name="option1">ตัวเลือกที่ 1</string>
    <string name="option2">ตัวเลือกที่ 2</string>
    <string name="option3">ตัวเลือกที่ 3</string>
    <string name="answer">คำตอบ</string>
    <string name="correct_answer_hint">กรอกคำตอบที่ถูกค้อง(1-3)</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
