<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/exam_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:layout_marginTop="16dp"
        android:background="@drawable/image_border">
    </ImageView>

    <Button
        android:id="@+id/add_exam_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_picture"
        android:layout_margin="16dp"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_name"
            android:textSize="@dimen/normal_txt_size" />

        <EditText
            android:id="@+id/exam_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="@dimen/normal_txt_size"/>

        <EditText
            android:id="@+id/exam_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q_type"
            android:textSize="@dimen/normal_txt_size"/>

        <Spinner
            android:id="@+id/select_q_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o_type"
            android:textSize="@dimen/normal_txt_size"
            android:layout_marginLeft="8dp"/>

        <Spinner
            android:id="@+id/select_o_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

    </LinearLayout>

</LinearLayout>